Mejoras en la redacción y correcciones menores | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/5. Codificacion de Señales.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/5. Codificacion de Señales.md
@@ -2,14 +2,14 @@ En este apartado nos centraremos única y exclusivamente en los esquemas de codi
 Las señales digitales son secuencias de pulsos, donde cada pulso representa un elemento de señal. Estos pulsos son discretos y discontinuos, lo que significa que toman valores fijos y están separados en el tiempo. Esta señal puede ser:
 
 - **Unipolar:** Todos los elementos de la señal mantienen el mismo signo algebraico. Esto significa que si se elige una representación positiva para los pulsos, todos los pulsos tendrán valores positivos, y viceversa.
-- **Bipolar:** Los elementos están representados por un nivel valor positivo y un nivel negativo de tensión.
+- **Bipolar:** Los elementos están representados por un nivel positivo y otro negativo de tensión.
 
 Cuando se transmiten datos por el medio físico el receptor tiene que realizar dos tareas fundamentales que le permitirán interpretar las señales digitales:
 
 1. **Conocer o determinar la duración de cada bit**, es decir, detectar cuando comienza y termina. Esta tarea es crucial para la sincronización entre el transmisor y el receptor.
 2. **Determinar el nivel de cada bit**, el receptor debe detectar si el valor de cada bit es alto (1) o bajo (0). Esta distinción es fundamental para decodificar correctamente la señal digital y reconstruir la información transmitida.
 
-Para mejorar y facilitar la realización de estas tareas y, en parte, la prestación del sistema se utilizan distintos ***esquemas de codificación***. Los esquemas de codificación son métodos establecidos para correlacionar los bits de datos con los elementos de la señal. Estos esquemas son vitales para mejorar la interpretación de las señales digitales y la eficiencia general del sistema de comunicación. 
+Para mejorar y facilitar la realización de estas tareas y, en parte las prestaciones del sistema, se utilizan distintos ***esquemas de codificación***. Los esquemas de codificación son métodos establecidos para correlacionar los bits de datos con los elementos de la señal. Estos esquemas son vitales para mejorar la interpretación de las señales digitales y la eficiencia general del sistema de comunicación. 
 
 ## Codificación de Datos Digitales a Señales Digitales
 
@@ -24,7 +24,7 @@ Los códigos NRZ son fáciles de implementar y se destacan por utilizar eficient
 ### Binarios Multinivel
 
 Las técnicas de codificación denominadas binario multinivel subsanan algunas de las deficiencias mencionadas para los códigos NRZ. Utiliza más de dos niveles de voltaje o estados para representar la información, lo que permite codificar más de un bit por elemento de señal.
-El esquema de codificación ***Bipolar-AMI***, representa a los ceros mediante la ausencia de tensión y los unos se representan como pulsos positivos o negativos. Esto facilita la sincronización, ya que no se necesita corriente continua para la transmisión de datos, además este tipo de codificación hace más sencilla la tarea de detección de errores. 
+El esquema de codificación ***Bipolar-AMI***, representa a los ceros mediante la ausencia de tensión y los unos se representan como pulsos positivos o negativos. Esto facilita la sincronización, ya que no se necesita corriente continua para la transmisión de datos, además este tipo de codificación hace más sencilla la tarea de detección de errores.
 Otro esquema que utiliza estas técnicas son los códigos ***Pseudoaleatorios*** lo cuales poseen las mismas ventajas que el bipolar-AMI con la diferencia que los unos se representan mediante la ausencia de tensión mientras que los ceros mediante pulsos de polaridad alterante.
 
 ### Bifase
@@ -59,7 +59,7 @@ Una vez los datos son transmitidos el receptor tiene que ser capas de captar las
 	3. **Codificación**: Los valores cuantificados se transforman en una secuencia de bits, lo que permite que la señal sea transmitida o almacenada en forma digital.
 
 >[!tldr] Teorema de Muestreo de Nyquist
->El teorema del muestreo nos dice que si usa señal se muestrea en un intervalo regular de tiempo con una frecuencia mayor que el doble de la frecuencia más alta de dicha señal, la muestra así obtenida contiene toda la información de la señal original.
+>El teorema del muestreo nos dice que si una señal se muestrea en un intervalo regular de tiempo con una frecuencia mayor que el doble de la frecuencia más alta de dicha señal, la muestra así obtenida contiene toda la información de la señal original.
 
 - **Modulación delta (DM)**: En este tipo de métodos, la señal de entrada analógica se aproxima mediante una función escalonada, donde en cada intervalo de muestreo la señal sube o baja un nivel de cuantización. En lugar de transmitir el valor absoluto de la señal, se transmite la diferencia entre el valor actual y el valor anterior de la señal en el intervalo previo.
 
