--- a/4º Año/Comunicaciones y Redes/Unidad 5/6. Medios de Transmision y Hardware de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/6. Medios de Transmision y Hardware de Red.md
@@ -79,28 +79,50 @@ Los sistemas satelitales ofrecen tres configuraciones posibles, cada una adecuad
 
 ### Ondas de Radio
 
-A diferencia de las microondas, las ondas de radio se caracterizan por ser omnidireccionales, esto hace que este tipo de ondas no necesiten de antenas parabólicas ni que dichas antenas estén asiladas sobre una plataforma para estar alineadas.
+A diferencia de las microondas, las ondas de radio se caracterizan por ser omnidireccionales, esto hace que este tipo de ondas no necesiten de antenas parabólicas ni que dichas antenas estén aisladas sobre una plataforma para estar alineadas.
 A diferencia de las microondas, las ondas de radio son menos afectadas por la lluvia y sufren menos atenuación debido a su mayor longitud de onda. Sin embargo, un problema común es la interferencia por multitrayectorias, causada por reflexiones en la superficie terrestre, el mar u otros objetos, que puede provocar la aparición de imágenes dobles en receptores de TV.
 
-## Hardware para Redes de Área Local
+## Cableado Estructurado
+
+El cableado estructurado es un conjunto de normas que estandarizan el cableado y los componentes utilizados para proporcionar una infraestructura de telecomunicaciones para edificios comerciales. Está diseñado para soportar múltiples tipos de sistemas de hardware, permitiendo una fácil administración y escalabilidad. A grandes rasgos las siguientes normas definen tanto los componentes como el cableado y canalizaciones del cableado estructurado:
+
+- **ANSI/TIA/EIA-569**: Provee especificaciones para el diseño de las instalaciones y la infraestructura edilicia necesaria para el cableado de telecomunicaciones en edificios comerciales, teniendo en cuenta que tanto los edificios así como los sistemas de telecomunicaciones son dinámicos.
+- **ANSI/J-STD-607**: Tierras y aterramientos para los sistemas de telecomunicaciones de edificios comerciales
+- **ANSI/TIA/EIA-568**: Especifica los requerimientos de un sistema integral de cableado, independiente de las aplicaciones y de los proveedores, para los edificios comerciales. Las distintas partes de esta normal definen los requisitos generales en cuatro a las componentes para poder colocar infraestructura de telecomunicaciones. Además, esta misma norma específica los diferentes requisitos necesarios para realizar el cableado los diferentes medios de transmisión existentes.
+
+El estándar ANSI/TIA/EIA-569 identifica seis componentes principales presentes en la infraestructura de red de un edificio comercial, las cuales son:
+
+1. **Instalaciones de Entrada**: Es el lugar por donde ingresan los servicios de telecomunicaciones al edificio y/o de interconexión con otros edificios.
+2. **Sala de Equipos**: Habitación dedicada a alojar los equipamientos de telecomunicaciones comunes al edificio, tales como servidores, equipos, centrales telefónicas (PBX), entre otras.
+3. **Canalizaciones de Backbone**: Son los cables troncales tanto internos, como externos al edificio. Estos cables puede ir a través de ductos, bandejas, de forma subterránea o aéreas.
+4. **Armarios de Telecomunicaciones**: Armarios o salas que contienen los puntos de terminación e interconexión de cableado, equipamiento de control y de telecomunicaciones (hubs, switches).
+5. **Canalizaciones horizontales**: Son un conjunto de cables que vinculan los armarios (o salas) de telecomunicaciones con las áreas de trabajo.
+6. **Áreas de trabajo**: Son las habitaciones o espacios dónde se ubican los escritorios, boxes, o sitios que hagan uso de los equipamientos de telecomunicaciones.
+
+### Hardware para Redes de Área Local
 
 Al momento de realizar el cableado e instalación de una red en un edificio, existen ciertos estándares que definen como realizar dicho cableado y qué medios de transmisión utilizar para cada caso en particular. Si bien todas estas especificaciones van de la mano de Ethernet, para realizar una instalación de este tipo de red también se utiliza hardware específico, como lo pueden ser repetidores, puentes, computadores y hasta enrutadores.
 
 ### Repetidores (Repeaters)
 
-El principal problema tanto para los medios guiados como no guiados es el alcance que estos tienen, debido principalmente a la atenuación de las señales analógicas. Los repetidores son dispositivos de hardware, que se encuentran en el primer nivel del modelo OSI, capas de amplificar la señal entre dos segmentos de cables, permitiendo así la extensión de la señal a mayores distancia. Al ser un dispositivo ubicado en la capa física el mismo no entiende de tramas ni direcciones físicas, es un dispositivo que se encarga únicamente de replicar y amplificar señales eléctricas.
+El principal problema tanto para los medios guiados como no guiados es el alcance que estos tienen, debido principalmente a la atenuación de las señales analógicas. Los repetidores son dispositivos de hardware, que se encuentran en el primer nivel del modelo OSI, los cuales son capaces de amplificar la señal entre dos segmentos de cables, permitiendo así la extensión de la señal a mayores distancia.
+Al ser un dispositivo ubicado en la capa física el mismo no entiende de tramas ni direcciones físicas, es un dispositivo que se encarga únicamente de replicar y amplificar señales eléctricas.
 
 ### Puentes (Bridges)
 
 Los puentes son dispositivos que sirve para interconectar segmentos de red formando una sola subred administrada por el mismo puente. Son piezas de hardware que tienen CPU, memoria y dos interfaces de red, situándose así en el segundo nivel del modelo OSI, la principal diferencia entre los puentes y los repetidores es que los puentes utilizan una interfaz de red y por eso son capaces de entender y manejar tramas, realizando algunas tareas como el filtraje de tráfico, el control de error de las tramas y además determinan a qué segmento de la red se debe ser enviada una trama.
-La motivación detrás del uso de los puentes es que también ayudan a extender la longitud de la red y por ende el número de nodos que la constituyen, permiten reducir el cuello de botella producido por tener muchos nodos generando tráfico sobre una sola línea, ya que los puentes pueden leer el campo de dirección de destino de las tramas, descartando aquellas tramas cuya dirección de destino y de origen sea el mismo segmento. Además de poder llevar un control de que estaciones están conectadas a la red local y a qué segmento pertenecen.
+La motivación detrás del uso de los puentes es que también ayudan a extender la longitud de la red y por ende el número de nodos que la constituyen. Permiten reducir el cuello de botella producido por tener muchos nodos generando tráfico sobre una sola línea, ya que los puentes pueden leer el campo de dirección de destino de las tramas, descartando aquellas tramas cuya dirección de destino y de origen sea el mismo segmento. Además, los puentes son capaces de llevar un control de que estaciones están conectadas a la red local y a qué segmento pertenecen.
 
 ### Conmutadores (Switches)
 
-Los conmutadores o switches son dispositivos que soporta múltiples segmentos y realiza el intercambio de tramas entre ellas mediante un bus de muy alta velocidad. A diferencia de los hubs y los switches toman decisiones basándose en las direcciones MAC evitando así la saturación del medio, se puede decir que switch administra de forma inteligente el ancho de banda. El propósito de este dispositivo es concentrar la conectividad, haciendo que la transmisión de datos sea más eficiente, conmutando las tramas desde las interfaces de entrada hacia los puertos de salida, dando a cada puerto el ancho de banda total.
-Tanto los conmutadores como los puentes tiene la capacidad de construir de forma automática sus tablas de direccionamiento, evitando así que los administradores y/o usuarios tengan que configurar el dispositivo de forma manual.
-Si bien tanto el switch como el puente pertenecen al segundo nivel del modelo OSI y comparten muchas similitudes, la principal diferencia es que los conmutadores realizan la conmutación de las tramas por hardware otorgando todo el ancho de banda a cada host para realizar la transmisión de las tramas evitando al máximo las colisiones, lo que permite tener muchos más nodos conectados de forma simultánea.
+Los conmutadores o switches son dispositivos que soporta múltiples segmentos y realiza el intercambio de tramas entre ellas mediante un bus de muy alta velocidad. A diferencia de los hubs, los switches toman decisiones basándose en las direcciones MAC evitando así la saturación del medio, se puede decir que los conmutadores administran de forma inteligente el ancho de banda. El propósito de este dispositivo es concentrar la conectividad, haciendo que la transmisión de datos sea más eficiente, conmutando las tramas desde las interfaces de entrada hacia los puertos de salida, dando a cada puerto el ancho de banda total.
 
->[!tldr] Enrutadores (Routers)
->Los routers son dispositivos de hardware que desempeñan funciones de nivel superior en la red. Ubicados en el tercer nivel del modelo OSI, son responsables de realizar el enrutamiento de paquetes y optimizar su dirección. Además, gestionan el control y filtrado del tráfico, mantienen tablas de routers adyacentes y de las redes LAN dentro de la red, y permiten segmentar la red en subredes.
+>[!info] Mantenimiento de Tablas de Direcciones MAC
+>Tanto los conmutadores como los puentes tiene la capacidad de construir de forma automática sus tablas de direccionamiento, evitando así que los administradores y/o usuarios tengan que configurar el dispositivo de forma manual.
+
+Si bien tanto los conmutadores como los puentes pertenecen al segundo nivel del modelo OSI y comparten muchas similitudes, la principal diferencia es que los conmutadores realizan la conmutación de las tramas por hardware otorgando todo el ancho de banda a cada host para realizar la transmisión de las tramas evitando al máximo las colisiones, lo que permite tener muchos más nodos conectados de forma simultánea.
+
+### Enrutadores (Routers)
+
+Los routers son dispositivos de hardware que desempeñan funciones de nivel superior en la red. Ubicados en el tercer nivel del modelo OSI, son responsables de realizar el enrutamiento de paquetes y optimizar su dirección. Además, gestionan el control y filtrado del tráfico, mantienen tablas de routers adyacentes y de las redes LAN dentro de la red, además de permitir segmentar la red en subredes.
 
