--- a/4º Año/Comunicaciones y Redes/Unidad 5/7. Tecnologias de Banda Ancha.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/7. Tecnologias de Banda Ancha.md
@@ -1,4 +1,4 @@
-La banda ancha es un término que se refiere a las tecnologías de telecomunicaciones que permiten la transmisión de datos a alta velocidad, facilitando el acceso a Internet y otros servicios digitales. Entre las tecnologías de banda ancha más comunes se encuentran los modems telefónicos y los módems DSL, que utilizan líneas telefónicas para ofrecer acceso a Internet, y LMDS, que emplea frecuencias de microondas para la transmisión inalámbrica de datos.
+La banda ancha es un término que se refiere a las tecnologías de telecomunicaciones que permiten la transmisión de datos a alta velocidad, facilitando el acceso a Internet y otros servicios digitales. Entre las tecnologías de banda ancha más comunes se encuentran los modems telefónicos, los módems DSL que utilizan líneas telefónicas para ofrecer acceso a Internet, y LMDS, que emplea frecuencias de microondas para la transmisión inalámbrica de datos.
 
 ## Modems Telefónicos
 
@@ -16,25 +16,23 @@ La capacidad y la velocidad de la conexión ADSL disminuyen con la distancia des
 
 ## Sistema de Distribución Local Multipunto (LMDS)
 
-El sistema de distribución local multipunto (LMDS) es una tecnología de acceso inalámbrico de banda ancha originalmente diseñada para la transmisión de televisión digital. Funciona como una tecnología inalámbrica fija punto a multipunto, utilizada principalmente en la última milla de las redes de telecomunicaciones.
+El sistema de distribución local multipunto (LMDS) es una tecnología de acceso inalámbrico de banda ancha originalmente diseñada para la transmisión de televisión digital. Funciona como una tecnología inalámbrica multipunto, utilizada principalmente en la última milla de las redes de telecomunicaciones.
 LMDS utiliza una arquitectura de red similar a la celular, empleando frecuencias de microondas típicamente en las bandas de 26 GHz y 29 GHz. El sistema se configura con una estación base que comunica a través de estas altas frecuencias con varias estaciones de suscriptores, proporcionando un método para distribuir servicios directamente a los usuarios.
 La tecnología ofrece un ancho de banda sustancial, capaz de soportar datos, Internet, voz y servicios de video. La capacidad de rendimiento y la distancia confiable del enlace dependen de las restricciones específicas del enlace de radio y del método de modulación utilizado, como la modulación por desplazamiento de fase o la modulación de amplitud. Sin embargo, el alcance efectivo de LMDS está típicamente limitado a unos 2.4 km debido a la atenuación por lluvia, aunque se pueden lograr enlaces de despliegue de hasta 8 km desde la estación base en condiciones específicas.
 A pesar de su promesa inicial, LMDS ha sido lento en encontrar tracción comercial y ha sido en gran parte superado por tecnologías más nuevas como LTE, WiMax y 5G NR, especialmente en los mercados de consumo. Sin embargo, todavía se utiliza en algunas aplicaciones para backhaul de alta capacidad, particularmente para interconectar redes como GSM, UMTS, LTE y Wi-Fi.
 
 ## Wi-Fi 6
 
-Wi-Fi 6 se basa en el estándar IEEE 802.11ax, el cual está diseñado para proveer la capacidad, eficiencia, amplia cobertura y rendimiento requeridos por los usuarios actuales en entornos de Wi-Fi exigentes.
+Wi-Fi 6 se basa en el estándar IEEE 802.11ax, el cual está diseñado para proveer capacidad, eficiencia, amplia cobertura y rendimiento requeridos por los usuarios actuales en entornos de Wi-Fi exigentes.
 Esta tecnología se centra en brindar una conexión de calidad en lugares con cientos o miles de dispositivos conectados, como estadios, salones de conferencias y otros lugares públicos, así como en redes corporativas que utilizan aplicaciones que demandan bajo retardo y gran ancho de banda. Además, garantiza que cada dispositivo funcione a un nivel óptimo, cumpla las normas más estrictas de seguridad e interoperabilidad, y logre un menor consumo de batería.
 Las redes Wi-Fi 6 son capaces de operar sobre bandas de frecuencias de hasta 6GHz, dividiendo dicho ancho de banda en diferentes subcanales permitiendo así el envío de información a diferentes puntos de acceso. El ancho de banda permite ser divido de dos formas:
 
 1. Se puede dividir el ancho de banda en 14 canales de 80MHz cada uno.
 2. Se puede dividir el ancho de banda en 7 canales de 160MHz cada uno.
 
-Cabe recalcar que por más que este tipo de redes operen en frecuencias más elevadas que las demás tecnologías inalámbricas, las redes Wi-Fi 6 permiten la conexión de dispositivos que solo soportan bandas de 2.4FHz o 5GHz.
+Cabe recalcar que por más que este tipo de redes operen en frecuencias más elevadas que las demás tecnologías inalámbricas, las redes Wi-Fi 6 permiten la conexión de dispositivos que solo soportan bandas de 2.4GHz o 5GHz.
 Esta tecnología implementa el mecanismo de ***acceso múltiple por división ortogonal de frecuencias (OFDMA)*** para controlar el acceso al medio, lo que le permite realizar un uso eficaz de los canales, aumentando la eficiencia de la red y reduciendo la latencia del tráfico ascendente y descendente en entornos de alta demanda. Adicionalmente, Wi-Fi 6 emplea ***Multi-user Multi input, Multi output (MU-MIMO)*** permitiéndole a los routers transmitir datos a varios dispositivos de manera simultánea.
 Estas redes optimizan el funcionamiento cuando hay numerosos dispositivos conectados mediante una técnica llamada ***Color Base Service Station (BSS)***. Esta técnica asigna un “color” a cada punto de acceso, lo que reduce la interferencia entre redes adyacentes. Cuando un punto de acceso detecta una conexión, primero verifica los bits de color del BSS. Si la trama pertenece a su red, el router procede con el procesamiento; de lo contrario, descarta la trama.
 
 >[!tldr] Menor Consumo de Energía
->Wi-Fi 6 promete una mejor eficiencia energética al incluir la tecnología ***Target Wake Time (TWT)***. Tradicionalmente, los dispositivos conectándose a un punto de acceso inalámbrico debe conectarse cada cierto al punto de acceso en busca de nuevas transmisiones. Con TWT los tiempos de conexión se negocian de antemano permitiendo configurar los tiempos en el que los dispositivos se conecten al punto de acceso, ahorrando de este modo energía.
-
-
+>Wi-Fi 6 promete una mejor eficiencia energética al incluir la tecnología ***Target Wake Time (TWT)***. Tradicionalmente, los dispositivos conectándose a un punto de acceso inalámbrico debe conectarse cada cierto tiempo al punto de acceso en busca de nuevas transmisiones. Con TWT los tiempos de conexión se negocian de antemano permitiendo configurar los tiempos en el que los dispositivos se conecten al punto de acceso, ahorrando de este modo energía.
