--- a/4º Año/Comunicaciones y Redes/Unidad 5/2. Estandares para las Redes de Area Local.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/2. Estandares para las Redes de Area Local.md
@@ -1,9 +1,7 @@
 ## Estándar IEEE 802 para Redes de Área Local
 
 Los protocolos definidos específicamente para la transmisión en redes LAN y MAN tratan cuestiones relacionadas con la transmisión de bloques de datos a través de la red. Según OSI, los protocolos de capas de red y superiores son independientes de la arquitectura de red y son aplicables a cualquier tipo de red. Así pues, el estudio de protocolos LAN está relacionado con las capas inferiores del modelo OSI.
-
-El IEEE 802 es un estándar que especifica la arquitectura de las redes LAN, funcionando como un modelo de referencia que ha sido adoptada por todas las organizaciones que trabajan en la especificación de los estándares LAN. Además, la capa física del modelo 802 incluye una especificación del medio de transmisión y de la topología. Generalmente, esto se considera por debajo de la capa inferior del modelo OSI. Sin embargo, dado que la elección del medio de transmisión y la topología es crítica en el diseño de redes LAN, se incluye una especificación del medio.
-
+El IEEE 802 es un estándar que especifica la arquitectura de las redes LAN, funcionando como un modelo de referencia que ha sido adoptada por todas las organizaciones que trabajan en la especificación de estándares LAN. Además, la capa física del modelo 802 incluye una especificación del medio de transmisión y de la topología. Generalmente, esto se considera por debajo de la capa inferior del modelo OSI. Sin embargo, dado que la elección del medio de transmisión y la topología es crítica en el diseño de redes LAN, se incluye una especificación del medio.
 Por encima de la capa física se encuentran las funciones asociadas a los servicios ofrecidos a los usuarios LAN. Entre ellas se encuentran las siguientes:
 
 1. En transmisión, ensamblado de datos en tramas con campos de dirección y de detección de errores.
@@ -28,7 +26,6 @@ La capa de control de enlace lógico en redes LAN es similar en varios aspectos 
 2. La capa de control de acceso al medio lo descarga de algunos detalles del acceso al enlace físico.
 
 El direccionamiento en este caso implica la especificación de un origen y destino. Las direcciones que se utilizan en la capa de control de enlace lógico, se denominan ***puntos de acceso al servicio (SAP)***.
-
 El protocolo LLC brinda todos los [[4º Año/Comunicaciones y Redes/Unidad 5/1. Capa de Enlace de Datos#Servicios de Transmisión|servicios de transmisión]] mencionados en la introducción a la capa de enlace de datos. Este protocolo es muy similar a HDLC, aun así poseen sus diferencias. En términos generales una trama estaría conformada de la siguiente manera:
 
 ![[formato-trama-llc.png]]
@@ -40,10 +37,8 @@ Los campos ***DSAP*** (Destination Service Access Point) y ***SSAP*** (Source Se
 
 ### Capa de Control de Acceso al Medio (MAC)
 
-Todas las LAN y MAN constan de un conjunto de dispositivos que deben compartir la capacidad de transmisión de la red, de manera que se requiere algún método de control de acceso al medio con objeto de hacer un uso eficiente de esta capacidad. Esta es la función del protocolo de control de acceso al medio.
-
-El control de los dispositivos al medio físico se puede realizar de forma centralizada o distribuida. A su vez la capa de control de acceso al medio debe encargarse de como se transmitirán los datos al medio, es decir, si se utilizan técnicas de transmisión síncronas o asíncronas.
-
+Todas las redes LAN y MAN constan de un conjunto de dispositivos que deben compartir la capacidad de transmisión de la red, de manera que se requiere algún método de control de acceso al medio con objeto de hacer un uso eficiente de esta capacidad. Esta es la función del protocolo de control de acceso al medio.
+El control de acceso de los dispositivos al medio físico se puede realizar de forma centralizada o distribuida. A su vez la capa de control de acceso al medio debe encargarse de como se transmitirán los datos al medio, es decir, si se utilizan técnicas de transmisión síncronas o asíncronas.
 Esta capa recibe un bloque de datos de la capa superior (LLC) y debe realizar funciones relacionadas con el acceso al medio y la transmisión de datos. Para conseguir esto se encapsula todo el mensaje LLC en una trama, cuyo formato varían de acuerdo al protocolo MAC al que se haga referencia
 
 >[!tldr] Formato Genérico de Trama MAC
@@ -57,27 +52,25 @@ Esta capa recibe un bloque de datos de la capa superior (LLC) y debe realizar fu
 >
 >En la mayor parte de los protocolos englobados por esta capa, es el mismo protocolo el responsable tanto de la detección de errores como de la recuperación de estos mismos a través de la solicitud de retransmisión de la trama errónea.
 
-## Técnicas de Control de Acceso al Medio
+#### Técnicas de Control de Acceso al Medio
 
-### ALOHA
+##### ALOHA
 
-***ALOHA*** es una técnica que permite a una estación enviar una trama siempre que esta lo necesite. Después de la transmisión, la estación escucha el medio para recibir una confirmación, lo que indicaría que la trama fue recibida correctamente. Si no se recibe confirmación, la estación retransmite la trama, y tras varios intentos fallidos, desiste. Una de las principales desventajas de esta técnica es la alta probabilidad de colisiones entre tramas, lo que limita la utilización máxima del canal a aproximadamente el 18%. Este problema se agrava a medida que aumenta la carga en la red. Existe una mejora denominada ALOHA ranurado que disminuye la posibilidad de colisión y aumenta el uso del canal a un 37%, aun así no es el mejor de los mecanismos de acceso existentes.
+***ALOHA*** es una técnica que permite a una estación enviar una trama siempre que esta lo necesite. Después de la transmisión, la estación escucha el medio para recibir una confirmación, lo que indicaría que la trama fue recibida correctamente. Si no se recibe confirmación, la estación retransmite la trama, y tras varios intentos fallidos, desiste.
+Una de las principales desventajas de esta técnica es la alta probabilidad de colisiones entre tramas, lo que limita la utilización máxima del canal a aproximadamente el 18%. Este problema se agrava a medida que aumenta la carga en la red. Existe una mejora denominada ALOHA ranurado que disminuye la posibilidad de colisión y aumenta el uso del canal a un 37%, aun así no es el mejor de los mecanismos de acceso existentes.
 
-### Acceso Múltiple con Detección de Portadora (CSMA)
+##### Acceso Múltiple con Detección de Portadora (CSMA)
 
 ***CSMA (Carrier Sense Multiple Access)*** es una técnica de acceso múltiple en la cual cuando una estación desea transmitir una trama, primero escucha el medio para detectar si hay alguna transmisión en curso (detección de portadora). Si el medio está ocupado, la estación espera, pero si está libre, transmite la trama. Sin embargo, si dos o más estaciones intentan transmitir al mismo tiempo, puede ocurrir una colisión, debido a que la señal portadora no ha logrado propagarse lo suficientemente rápido. Para gestionar este riesgo, la estación espera una confirmación tras la transmisión. Si no recibe la confirmación luego de cierto tiempo se asume que hubo una colisión y se retransmite la trama.
-
 La principal desventaja de CSMA es que, a pesar de reducir la probabilidad de colisiones, todavía pueden ocurrir colisiones, especialmente si varias estaciones intentan transmitir simultáneamente. Variantes como CSMA p-persistente pueden manejar cuidadosamente el valor de $p$ para evitar inestabilidades bajo alta carga, donde las colisiones repetidas pueden llevar a una caída significativa del rendimiento.
 
-### Acceso Múltiple con Detección de Portadora con Detección de Colisiones (CSMA/CD)
+##### Acceso Múltiple con Detección de Portadora con Detección de Colisiones (CSMA/CD)
 
 ***CSMA/CD (Carrier Sense Multiple Access with Collision Detection)*** es una versión mejorada de CSMA que permite a una estación transmitir solo si detecta que el medio está libre. Si el medio está ocupado, la estación espera. Si durante la transmisión se detecta una colisión, la estación envía una señal de interferencia para notificar a todas las estaciones de la colisión y detiene la transmisión. Luego, la estación espera un tiempo aleatorio antes de intentar retransmitir. Esta técnica reduce el tiempo desaprovechado al tiempo necesario para detectar una colisión, lo que mejora la eficiencia del uso del canal.
-
 La principal desventaja de CSMA/CD es que, si bien minimiza el tiempo perdido por colisiones, todavía puede experimentar inestabilidad en situaciones de alta carga, especialmente si se utilizan tramas cortas en comparación con el retardo de propagación. Para mitigar esto, se utiliza la técnica de ***espera exponencial binaria*** en redes como Ethernet, donde el tiempo de espera aumenta exponencialmente con cada intento fallido, ayudando a evitar que las colisiones repetidas lleven a la congestión de la red.
 
 >[!tldr] Espera o Retroceso Exponencial Binario
->Cuando una estación en la red detecta una colisión, detiene inmediatamente la transmisión de datos y emite una señal de jamming para alertar a todas las demás estaciones sobre la colisión. Para evitar nuevas colisiones al retransmitir las tramas, se emplea la técnica de espera exponencial binaria.
->
+>Cuando una estación en la red detecta una colisión, detiene inmediatamente la transmisión de datos y emite una señal de ***jamming*** para alertar a todas las demás estaciones sobre la colisión. Para evitar nuevas colisiones al retransmitir las tramas, se emplea la técnica de espera exponencial binaria.
 >Después de una colisión, la estación espera un tiempo antes de intentar retransmitir los datos. Este tiempo de espera es aleatorio y se determina a partir de la _**ventana de contención**_, que consiste en pequeños intervalos de tiempo (slots) definidos por la red. Con cada colisión adicional, el tamaño de la ventana de contención se incrementa, y la estación selecciona aleatoriamente el número de slots que deberá esperar antes de intentar transmitir de nuevo.
 
 ## Ethernet
@@ -86,9 +79,7 @@ Las redes LAN de alta velocidad más ampliamente utilizadas en la actualidad son
 
 >[!tldr] Slot Time
 >En las redes Ethernet, el ***slot time*** es la cantidad de tiempo que toma la transmisión de una trama mínima de 512 bits. Es un parámetro crucial en el funcionamiento del protocolo CSMA/CD.
->
 >El slot time se establece generalmente en 51,2 microsegundos para garantizar que una estación de red pueda detectar una colisión antes de terminar de enviar la trama completa. Esta decisión se basa en la necesidad de facilitar la detección de colisiones y asegurar que las tramas se transmitan correctamente a través del enlace. Además, el slot time ayuda a establecer el tamaño mínimo de las tramas que se pueden transmitir, garantizando una correcta propagación de la señal en la red.
->
 >El tamaño mínimo de las tramas puede variar de acuerdo a la capacidad del enlace: a mayor capacidad, mayor será el tamaño mínimo de la trama para respetar el slot time.
 
 El formato normal de una trama Ethernet está compuesta por los siguientes campos:
@@ -97,7 +88,7 @@ El formato normal de una trama Ethernet está compuesta por los siguientes campo
 - **Delimitador del comienzo de la trama (SFD)**: Consiste en la secuencia de bits 10101011, que indica el comienzo real de la trama y posibilita que el receptor pueda localizar el primer bit del resto de la trama.
 - **Dirección de destino (DA)**: Especifica la estación o estaciones a las que va dirigida la trama. Puede tratarse de una única dirección física, una dirección de grupo o una dirección global.
 - **Dirección de origen (SA)**: Especifica la estación que envió la trama.
-- **Longitud/Tipo**: Contiene la longitud del campo de datos LLC expresado en octetos, o el campo Tipo de Ethernet, dependiendo de que la trama siga la norma IEEE 802.3 o la especificación primitiva de Ethernet. En cualquier caso, el tamaño máximo de la trama, excluyendo el preámbulo y el SFD, es de 1518 octetos.
+- **Longitud/Tipo**: Contiene la longitud del campo de datos LLC expresado en bytes, o el campo Tipo de Ethernet, dependiendo de que la trama siga la norma IEEE 802.3 o la especificación primitiva de Ethernet. En cualquier caso, el tamaño máximo de la trama, excluyendo el preámbulo y el SFD, es de 1518 bytes.
 - **Datos LLC**: Unidad de datos proporcionada por el LLC.
 - **Relleno**: Consiste en octetos añadidos para asegurar que la trama sea lo suficientemente larga como para que la técnica de detección de colisiones funcione correctamente.
 - **Secuencia de Comprobación de Trama (FCS)**: Está constituido por una comprobación de redundancia cíclica de 32 bits, calculada teniendo en cuenta todos los campos excepto el preámbulo, el SFD y el FCS.
@@ -106,7 +97,7 @@ El formato normal de una trama Ethernet está compuesta por los siguientes campo
 
 ### Especificación del Medio Físico
 
-En la especificación IEEE 802 no solo se especifican los distintos protocolos y métodos de transferencia de datos, sino que también abarca la especificación de los medios físicos que se pueden utilizar para este tipo de redes. El estándar brinda múltiples opciones para realizar el cableado de una red LAN, si bien puede ser confuso tanto para los clientes como para los proveedores, el estándar garantiza la interoperabilidad entre los distintos medios físicos:
+En la especificación IEEE 802 no solo abarca a los distintos protocolos y métodos de transferencia de datos, sino que también especifican los medios físicos que se pueden utilizar para este tipo de redes. El estándar brinda múltiples opciones para realizar el cableado de una red LAN, si bien puede ser confuso tanto para los clientes como para los proveedores, el estándar garantiza la interoperabilidad entre los distintos medios físicos:
 
 - **10BASE5**: Especifica el uso de cable coaxial de 50 ohmios y señalización digital Manchester2. La longitud máxima del segmento de cable se fija a 500 metros. Esta longitud se puede extender mediante la utilización de repetidores.
 - **10BASE2**: Es similar a 10BASE5, excepto por el uso de un cable más fino que admite tomas de conexión para distancias más cortas que el cable de 10BASE5. Se trata de una alternativa menos costosa a aquel.
@@ -114,7 +105,6 @@ En la especificación IEEE 802 no solo se especifican los distintos protocolos y
 - **10BASE-F**: Contiene tres especificaciones: una topología en estrella pasiva para la interconexión de estaciones y repetidores con segmentos de hasta 1 km de longitud; un enlace punto a punto que puede ser usado para conectar estaciones o repetidores separados hasta 2 km; y un enlace punto a punto que puede usarse para conectar repetidores a una distancia máxima de 2 km.
 
 Además de estas alternativas, existen varias versiones que funcionan a 100 Mbps, 1 Gbps y 10 Gbps. Todas las opciones 100BASE-T usan el protocolo MAC y el formato de la trama Ethernet. Mientras que 100BASE-X identifica al conjunto de opciones que usan las especificaciones del medio físico definidas originalmente para ***FDDI (Fiber Distributed Data Interface)***. 
-
 Todos los esquemas 100BASE-X emplean dos enlaces físicos entre los nodos, uno para transmisión y otro para recepción, este tipo de redes pueden hacer uso de *pares trenzados apantallados (STP)* o *pares trenzados no apantallados (UTP)* de alta calidad (categoría 5), mientras que 100BASE-FX hace uso de fibra óptica. Por otro lado, 100BASE-T4 define una alternativa menos costosa que puede utilizar UTP de voz de categoría 3 además de UTP de categoría 5 de alta calidad. Para alcanzar los 100 Mbps en cables de baja calidad, 100BASE-T4 especifica el uso de 4 líneas de par trenzado entre los nodos, de los cuales tres se usan simultáneamente para la transmisión de datos en una dirección.
 
 ![[especificacion-fisica-ethernet.png]]
@@ -131,9 +121,6 @@ Cada una de estas especificaciones está diseñada para diferentes entornos y ne
 ## Token Ring
 
 Las redes ***Token Ring*** funcionan mediante un mecanismo en el cual un pequeño paquete especial llamado ***token*** circula continuamente por un anillo de dispositivos conectados. En esta topología, cada dispositivo está conectado a dos otros dispositivos formando un anillo cerrado, donde los datos se transmiten secuencialmente, bit a bit, alrededor del anillo. Cada dispositivo actúa como un repetidor, regenerando y retransmitiendo cada bit que recibe para garantizar que los datos lleguen a su destino sin degradación.
-
 El funcionamiento básico de una red Token Ring se basa en el uso del token para el control de acceso al medio. Solo la estación que captura el token puede transmitir datos. Cuando una estación quiere transmitir, debe esperar a que le llegue el token. Al recibir el token, la estación lo toma y lo convierte en el comienzo de su trama de datos. Luego, la estación transmite sus datos alrededor del anillo, y estos circulan por el anillo hasta llegar al dispositivo destinatario. El dispositivo destinatario copia los datos y, dependiendo del protocolo, marca el paquete como recibido. El token se libera nuevamente en el anillo una vez que la estación emisora ha terminado de transmitir, permitiendo que otra estación pueda usarlo para enviar sus datos. Este mecanismo asegura un acceso equitativo al medio, evitando colisiones al garantizar que solo una estación transmita a la vez.
-
 Los repetidores en un anillo Token Ring tienen dos estados principales: el estado de escucha y el estado de transmisión. En el estado de escucha, el repetidor retransmite los datos que recibe, mientras que en el estado de transmisión, retransmite los datos de la estación a la que está conectado. Existe también un tercer estado, conocido como cortocircuito (bypass), que permite que las señales propagadas atraviesen el repetidor sin retraso, mejorando las prestaciones y proporcionando una solución parcial al problema de fiabilidad.
-
 El sistema requiere mecanismos de mantenimiento, como la supervisión de la existencia del token para asegurar que siempre haya uno en circulación y que no haya duplicados, lo cual es crítico para el funcionamiento correcto de la red.
