--- a/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes Inalambricas y Virtuales.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes Inalambricas y Virtuales.md
@@ -13,21 +13,17 @@ Las redes LAN inalámbricas se clasifican, generalmente, de acuerdo con la técn
 - **LAN de espectro expandido**: Hace uso de tecnologías de transmisión de espectro expandido. En la mayoría de los casos, estas LAN funcionan en las bandas ISM, de modo que no se necesita licencia FCC.
 - **Microondas de banda estrecha**: estas LAN operan en el rango de las microondas, pero no hacen uso de espectro expandido. Algunos de estos productos funcionan a frecuencias para las que es necesaria una licencia FCC, mientras que otras lo hacen en alguna de las bandas ISM.
 
-Si bien los infrarrojos permiten alcanzar velocidades de transmisión mucho más altas, la instalación es mucho más barata y pueden brindar cobertura a toda una habitación sin problemas alguno. No obstante estas ondas no pueden atravesar muros sólidos, sin mencionar que son muy susceptibles a los ruidos provocados por la luz natural y artificial, si bien esto se puede solucionar aumentando el rango de frecuencias a las que opera el infrarrojo estas deben ser limitadas de todas maneras debido a que puede dañar la vista y aumentar el consumo eléctrico del edificio. Por estas razones se utilizan mucho más los demás tecnologías de transmisión.
-
 Actualmente, las redes LAN inalámbricas más populares son aquellas que utilizan técnicas de espectro expandido. Este tipo de redes generalmente adoptan una disposición de celdas múltiples donde celdas adyacentes usan diferentes frecuencias para evitar interferencias, pudiendo adoptar una topología basada en concentradores, situados en lugares como el techo y conectados a LAN cableadas, u optar por una configuración entre iguales usando algoritmos MAC como CSMA para controlar el acceso. Los concentradores facilitan la conectividad entre redes y pueden controlar la transición de estaciones móviles entre celdas. Además, es deseable que estas redes operen sin necesidad de licencia.
-
 El término microondas de banda estrecha describe la utilización de una banda de frecuencias específica y limitada para la transmisión de voz, datos y vídeo, que hasta hace poco requería licencia. Motorola, con 600 licencias en Estados Unidos, controla la frecuencia de 18 GHz para asegurar comunicaciones sin interferencias entre redes LAN en áreas metropolitanas. Estas frecuencias son gestionadas por la FCC y están diseñadas para evitar interferencias entre sistemas geográficamente cercanos, utilizando configuraciones de celdas con bandas no solapadas. A diferencia de las bandas ISM no reguladas, las bandas con licencia ofrecen seguridad legal contra las interferencias.
 
 ### Arquitectura y Servicios IEEE 802.11
 
-En 1990 se formó el comité IEEE 802.11 con el propósito de desarrollar un protocolo MAC y una especificación del medio físico para redes LAN inalámbricas. El componente elemental de una red LAN inalámbrica es un ***conjunto básico de servicios (BSS)***, consistente en un número de estaciones ejecutando el mismo protocolo MAC y compitiendo por el acceso al mismo medio inalámbrico compartido. Pudiendo funcionar de forma aislada o estar conectados a un ***sistema troncal distribuido (DS)*** a través de un ***punto de acceso (AP)*** que funciona como puente. El protocolo MAC puede ser completamente distribuido o estar centralizado siendo controlado todo desde el punto de acceso.
-
+En 1990 se formó el comité IEEE 802.11 con el propósito de desarrollar un protocolo MAC y una especificación del medio físico para redes LAN inalámbricas. El componente elemental de una red LAN inalámbrica es un ***conjunto básico de servicios (BSS)***, el cual esta compuesta por un número de estaciones ejecutando el mismo protocolo MAC y compitiendo por el acceso al mismo medio inalámbrico compartido. Pudiendo funcionar de forma aislada o estar conectados a un ***sistema troncal distribuido (DS)*** a través de un ***punto de acceso (AP)*** que funciona como puente entre los distintos BSS. El protocolo MAC puede ser completamente distribuido o estar centralizado siendo controlado todo desde el punto de acceso.
 Un ***conjunto extendido de servicios (ESS)*** consiste en dos o más conjuntos básicos de servicios interconectados mediante un sistema de distribución. Este conjunto extendido de servicios aparece a nivel de control de enlace lógico como una única red LAN lógica.
 
 ![[conjunto-extendido-servicios.png]]
 
-Por otro lado, la normativa IEEE 802.11 define nueve servicios que deben ser proporcionados por una red inalámbrica para ofrecer una funcionalidad equivalente a la inherente a una LAN cableada tradicional, entre las cuales se encuentran los siguientes servicios:
+Por otro lado, la normativa IEEE 802.11 define nueve servicios que deben ser proporcionados por una red inalámbrica para ofrecer una funcionalidad equivalente a la de una LAN cableada tradicional, entre las cuales se encuentran los siguientes servicios:
 
 1. **Distribución**: Es el servicio primario utilizado por las estaciones para intercambiar tramas MAC cuando la trama debe atravesar el DS para pasar de una estación en un BSS a otra estación en un BSS diferente.
 2. **Integración**: Permite la transferencia de datos entre una estación situada en una LAN IEEE 802.11 y otra estación en una LAN IEEE 802.X.
@@ -56,7 +52,6 @@ La capa MAC de IEEE 802.11 cubre tres aspectos funcionales la entrega fiable de 
 #### Entrega Fiable de Datos
 
 El ruido, las interferencias y otros efectos de propagación repercuten en la pérdida de un número significativo de tramas. Incluso disponiendo de códigos correctores de errores, es posible que muchas tramas MAC no sean recibidas apropiadamente. Si bien este problema puede ser solucionado delegando el problema de la corrección de errores a capas superiores esto no es lo más eficiente, es por eso que el estándar incluye un protocolo de intercambio de tramas. Cuando una estación recibe una trama de datos, envía una trama de confirmación de vuelta a la estación de origen. Este intercambio es indivisible y no debe ser interrumpido por otras transmisiones. Si la estación de origen no recibe la confirmación rápidamente, posiblemente debido a daños en la trama de datos o de control, retransmitirá la trama.
-
 Para aumentar la fiabilidad, se puede emplear un esquema de cuatro tramas. Primero, el emisor envía una ***trama de solicitud para enviar (RTS)*** al destino, el receptor responde con una ***trama de permiso para enviar (CTS)***. Después de recibir esta trama, el emisor envía la trama de datos y el destino responde con una confirmación. La trama RTS sirve para notificar a las estaciones cercanas que una transmisión está en curso, evitando interferencias.
 
 #### Control de Acceso
@@ -64,10 +59,9 @@ Para aumentar la fiabilidad, se puede emplear un esquema de cuatro tramas. Prime
 El estándar evaluó dos enfoques para los algoritmos MAC, los protocolos de acceso distribuido y los protocolos de acceso centralizado. Los primeros distribuyen la decisión de transmisión entre todos los nodos mediante detección de portadora. Los segundos cuentan con una autoridad central que regula la transmisión.
 
 >[!tldr] Utilización de los Enfoques
->Los protocolos de acceso distribuido son adecuados para redes ad hoc y otras configuraciones de LAN inalámbricas con tráfico intermitente. Mientras que los protocolos de acceso centralizado son ideales para redes con estaciones interconectadas a través de una estación base que sirve de enlace con una LAN troncal y son beneficiosos para datos de alta prioridad o con requisitos de tiempo real.
+>Los protocolos de acceso distribuido son adecuados para redes ad-hoc y otras configuraciones de LAN inalámbricas con tráfico intermitente. Mientras que los protocolos de acceso centralizado son ideales para redes con estaciones interconectadas a través de una estación base que sirve de enlace con una LAN troncal y son beneficiosos para datos de alta prioridad o con requisitos de tiempo real.
 
 El resultado final definido en el estándar es el algoritmo llamado ***DFWMAC (Distributed Foundation Wireless MAC)***, que combina un control de acceso distribuido con un control centralizado opcional. La subcapa MAC inferior, la ***función de coordinación distribuida (DCF)***, utiliza un algoritmo de contención para gestionar el acceso general. Para tráfico prioritario y sin contención, se utiliza la ***función de coordinación puntual (PCF)***, que se sitúa sobre la DCF y aprovecha sus características para garantizar el acceso a sus usuarios.
-
 La subcapa DCF utiliza ***CSMA/CA*** para acceder al medio de comunicación, este protocolo de acceso al medio intenta evitar las colisiones al máximo. No incluye detección de colisiones porque en redes inalámbricas es difícil diferenciar entre señales débiles y ruido. Para gestionar el acceso y evitar colisiones, esta subcapa utiliza retardos basados en el ***espacio entre tramas (IFS)***, con diferentes valores para manejar prioridades:
 
 1. **SIFS (Short IFS):** El más corto, usado para respuestas rápidas como confirmaciones y asegura la prioridad más alta en la transmisión.
@@ -75,11 +69,8 @@ La subcapa DCF utiliza ***CSMA/CA*** para acceder al medio de comunicación, est
 3. **DIFS (Distributed Coordination Function IFS):** El más largo, utilizado para tráfico ordinario y asincrónico.
 
 La espera entre tramas permite una gestión eficiente del tráfico, donde la espera exponencial binaria maneja las cargas elevadas y los intentos repetidos de transmisión. Estas medidas ayudan a reducir colisiones y mantener la estabilidad del tráfico de red.
-
 La subcapa PCF se implementa por sobre DCF. En este método de acceso existirá un coordinador central que gestiona la red mediante sondeos utilizando un PIFS, que es más corto que un DIFS. Esto permite al coordinador tomar control del medio rápidamente, bloqueando el tráfico asíncrono mientras realiza y recibe respuestas a los sondeos.
-
 En un escenario extremo, el coordinador podría, teóricamente, monopolizar el medio emitiendo sondeos continuamente, especialmente en redes con estaciones que tienen tráfico sensible a los retardos. Para mitigar esto, se usa una estructura llamada *supertrama*, que divide el tiempo entre un período controlado por el coordinador y un período de contención para acceso asíncrono. Durante la primera parte de la *supertrama*, el coordinador realiza sondeos siguiendo un esquema de turno rotatorio. Después, se reserva un tiempo para que otras estaciones accedan al medio de manera competitiva.
-
 Este enfoque permite equilibrar entre el control centralizado y el acceso competitivo, asegurando que tanto el tráfico prioritario como el tráfico regular tengan oportunidades de transmisión.
 
 ### Formato de Trama
@@ -97,8 +88,7 @@ Si bien existen tres tipos de tramas, el formato genérico de una trama MAC para
 
 #### Tipos de Trama 
 
-Como se mencionó anteriormente para las redes de área local inalámbrica existen tres tipos de trama, las de control, las de datos y las de gestión.
-Las tramas de control prestan servicio que aseguran la entrega fiable de tramas de datos. Existen seis subtipos de tramas de control:
+Como se mencionó anteriormente para las redes de área local inalámbrica existen tres tipos de trama, las de control, las de datos y las de gestión. Las tramas de control prestan servicio que aseguran la entrega fiable de tramas de datos. Existen seis subtipos de tramas de control:
 
 - **Sondeo de ahorro de energía (PS-Poll, Power Save-Poll)**: Esta trama es enviada por cualquier estación hacia la estación que contiene el punto de acceso. Su objetivo es solicitar al punto de acceso que transmita una trama destinada a esta estación que ha sido almacenada en una memoria temporal debido a que la estación se encontraba en modo de ahorro de energía.
 - **Solicitud para enviar (RTS)**: Esta trama se emplea para notificar tanto al destinatario potencial como a las demás estaciones dentro del alcance de que se planea enviar una trama de datos a ese destinatario específico.
@@ -116,7 +106,6 @@ Por parte de la trama de datos, existen ocho subtipos de tramas que pueden ser o
 
 >[!note] Aclaración sobre las Tramas Restantes
 >Los cuatro subtipos restantes de tramas de datos no transportan, datos del usuario. La trama conocida como ***función nula*** no transporta datos, sondeos o confirmaciones, sino que se utiliza para transportar el bit de gestión de energía en el campo de control de una trama destinada al punto de acceso, indicando así que la estación va a entrar en un estado de operación de baja energía.
->
 >Las tres tramas restantes poseen la misma funcionalidad que los subtipos de tramas de datos correspondientes que se han comentado en la lista anterior, pero sin transportar datos.
 
 Por último la ***trama de gestión*** se utilizan para gestionar las comunicaciones entre las estaciones y los puntos de acceso. Las funciones que cubren incluyen la gestión de las asociaciones, es decir, la solicitud, respuesta, resolución, disociación y autenticación.
@@ -125,18 +114,14 @@ Por último la ***trama de gestión*** se utilizan para gestionar las comunicaci
 
 En la actualidad muchas redes LAN institucionales modernas suelen estar configuradas de forma jerárquica, teniendo cada departamento o grupo de trabajo su propia red LAN conmutada conectada a su vez a otra red conmutada de nivel superior que les brinda acceso al resto de terminales de la red local. Aunque una configuración de este tipo funciona bien en un mundo ideal, este tipo de redes presentan una serie de desventajas:
 
-- **Falta de aislamiento del tráfico**. Aunque la jerarquía localiza el tráfico del grupo dentro de un mismo conmutador, el tráfico de difusión tienen que atravesar toda la red institucional. Limitar el ámbito del tráfico de difusión mejoraría el rendimiento de la LAN. Quizá más importante, sería también deseable limitar el tráfico de difusión de la LAN por razones de seguridad y confidencialidad.
+- **Falta de aislamiento del tráfico**. Aunque la jerarquía localiza el tráfico del grupo dentro de un mismo conmutador, el tráfico de difusión tienen que atravesar toda la red institucional. Limitar el ámbito del tráfico de difusión mejoraría el rendimiento de la LAN. Sería también deseable limitar el tráfico de difusión de la LAN por razones de seguridad y confidencialidad.
 - **Uso ineficiente de los conmutadores**. Si una institución tiene 10 grupos, entonces se necesitarían 10 conmutadores de primer nivel. Si cada uno de los grupos es pequeño, entonces un único conmutador con los puertos suficientes para acomodar a todo el mundo, pero este único conmutador no proporcionaría la funcionalidad de aislamiento del tráfico.
 - **Gestión de los usuarios**. Si un empleado se mueve entre grupos, el cableado físico debe modificarse para conectar al empleado a un conmutador diferente, esto se torna más complejo si los empleados pertenecen dos o más grupos.
 
 Afortunadamente, cada una de estas desventajas puede ser abordada mediante el uso de conmutadores compatibles con _**redes de área local virtuales (VLAN)**_. Estos conmutadores permiten definir múltiples VLAN sobre una única infraestructura física de red de área local.
-
 En una VLAN basada en puertos, el administrador de la red divide las interfaces del conmutador en grupos. Cada grupo constituye una VLAN, donde los puertos de cada VLAN forman un dominio de difusión. Con esta configuración, solo los dispositivos pertenecientes al mismo grupo recibirán los mensajes de difusión, aislando así el tráfico interno de la organización.
-
 Debido a este aislamiento, es imposible intercambiar tráfico entre los distintos grupos de la red. Este inconveniente se resuelve conectando una de las interfaces de cada grupo a un router, que se encargará de redirigir el tráfico entre VLAN. Afortunadamente, muchos conmutadores modernos ya incluyen un router integrado que gestiona el redireccionamiento entre VLAN.
-
 Un aspecto interesante de las VLAN es que permiten que dispositivos ubicados en diferentes edificios pertenezcan a la misma red virtual. Esto se logra interconectando los distintos conmutadores VLAN mediante la técnica conocida como _**troncalización VLAN (VLAN Trunking)**_. Esta técnica configura una interfaz como troncal, la cual conecta ambos conmutadores VLAN. El puerto troncal pertenece a todas las VLAN, y las tramas enviadas a cualquier VLAN son reenviadas a través del enlace troncal hacia el otro conmutador.
-
 Un desafío que surge en este escenario es identificar a qué VLAN pertenece una trama cuando se envía a través del enlace troncal. Para solucionar esto, el estándar IEEE define un formato de trama Ethernet extendido, que incluye la trama Ethernet estándar más una _**etiqueta VLAN**_ de 4 bytes añadida a la cabecera de la trama.
 
 ![[trama-con-tpid.png]]
@@ -147,12 +132,13 @@ Esta etiqueta identifica la VLAN a la que está destinada la trama. Al enviar un
 >La etiqueta VLAN se compone de los siguientes campos:
 >
 >- **Identificador de Protocolo de Etiquetado (TPID)**: Campo de 2 bytes, con un valor hexadecimal fijo de 81-00.
->- **Control de Etiquetado (Tag Control Information)**: Campo de 2 bytes, el cual incluye un campo identificador de VLAN de 12 bits y un campo de prioridad de 3 bits, cuya función es similar a la del campo TOS en los datagramas IP.
+>- **Control de Etiquetado (Tag Control Information)**: Campo de 2 bytes, el cual incluye un campo identificador de VLAN de 12 bits y un campo de prioridad de 3 bits, cuya función es similar a la del campo TOS en los paquetes IP.
 
 Las VLAN ofrecen ciertas ventajas, como la reducción de costos asociados a traslados, adiciones y cambios en la red, un mejor control de multidifusión (broadcast) y una mayor seguridad tanto a nivel de grupo de trabajo como de red. Sin embargo, también presentan ciertas desventajas, como la necesidad de una configuración cuidadosa por software y el hecho de que cada switch o router debe invertir recursos de procesamiento para revisar el etiquetado de cada trama VLAN.
 
 >[!example] Maneras de Configurar una VLAN
->Al momento de instalar una VLAN la misma se puede configurar de forma estática o dinámica. En las VLAN estáticas, las estaciones de trabajo conectadas a un puerto en particular pertenecerán siempre a la misma VLAN, a menos que se cambie manualmente la configuración, aunque existen varias formas de asignar estaciones de trabajo a una VLAN en este tipo:
+>Al momento de instalar una VLAN la misma se puede configurar de forma estática o dinámica. En las VLAN estáticas, las estaciones de trabajo conectadas a un puerto en particular pertenecerán siempre a la misma VLAN, a menos que se cambie manualmente la configuración, aunque existen varias formas de asignar estaciones de trabajo a una VLAN :
+>
 >- **Por puertos o interfaz**: Cada puerto del switch se asigna manualmente a una VLAN. Este es el método más común y que hemos mencionado anteriormente.
 >- **Por dirección física**: Se asignan las estaciones a las VLAN basándose en las direcciones MAC de los dispositivos conectados. El switch mantiene una tabla, se especifica qué dirección MAC corresponde a cada VLAN.
 >- **Por protocolo**: Se asignan las VLAN en función del protocolo que utiliza cada estación. El switch asigna a la VLAN correspondiente según el protocolo que reconoce.
@@ -163,15 +149,12 @@ Las VLAN ofrecen ciertas ventajas, como la reducción de costos asociados a tras
 ## World Interoperability for Microwave Access (WiMAX)
 
 WiMAX es una familia de estándares IEEE 802.16 que trata de suministrar datos inalámbricos a un gran número de usuarios en un área extensa, a velocidades capaces de competir con las de los modems por cable y las redes ADSL.
-
-La arquitectura básica propuesta en el estándar consta de una estación base que centraliza un número potencialmente grande de clientes, en este sentido es similar a una red WiFi. La estación base coordina la transmisión de los paquetes de la capa de enlace de forma bidireccional, es decir, desde el emisor al receptor y viceversa. Todo esto utilizando multiplexación por división de tiempo, aunque el tamaño de los marcos son variables, ya que al momento de la transmisión la estación base envía un listado de mensajes ***MAP (Media Access Protocol)*** que informa a las estaciones receptoras las propiedades de la capa física que se utilizarán para transmitir las subsiguientes ráfagas de tramas dentro de la estructura de marcos.
-
-Puede que la estación base decida cambiar las propiedades de la capa física actuales por otras que se adapten mejor a las capacidades actuales de los receptores, además la estación base también puede seleccionar de forma arbitraria a un conjunto de receptores a los que se le va a enviar tanto la configuración como las ráfagas de tramas. Este método de *planificación optimista* permite hacer un uso óptimo del medio.
-
+La arquitectura básica propuesta en el estándar consta de una estación base que centraliza un número potencialmente grande de clientes, en este sentido es similar a una red Wi-Fi. La estación base coordina la transmisión de los paquetes de la capa de enlace de forma bidireccional, es decir, desde el emisor al receptor y viceversa. Todo esto utilizando multiplexación por división de tiempo, aunque el tamaño de los marcos son variables, ya que al momento de la transmisión la estación base envía un listado de mensajes ***MAP (Media Access Protocol)*** que informa a las estaciones receptoras las propiedades de la capa física que se utilizarán para transmitir las subsiguientes ráfagas de tramas dentro de la estructura de marcos.
+Puede que la estación base decida cambiar las propiedades de la capa física actuales por otras que se adapten mejor a las capacidades actuales de los receptores. La estación base también puede seleccionar de forma arbitraria a un conjunto de receptores a los que se le va a enviar tanto la configuración como las ráfagas de tramas. Este método de *planificación optimista* permite hacer un uso óptimo del medio.
 Una estación base WiMAX también regula el acceso de las estaciones de abonado al canal ascendente mediante el uso de mensajes ***UL-MAP***. Estos mensajes controlan la cantidad de tiempo durante la cual se da a cada estación de abonado acceso al canal en los subsiguientes canales ascendentes. Los abonados emplean las partes iniciales de la estructura de canal ascendente para transmitir mensajes de control del enlace radio, mensajes para solicitar la admisión y la autenticación en la red WiMAX y mensajes de protocolos de mayor nivel relacionados con la administración, como por ejemplo DHCP y SNMP.
 
 >[!tldr] Limitaciones al Medio Físico y las Políticas de Acceso al Medio
->El estándar WiMAX no impone un conjunto concreto de parámetros de la capa física que haya que utilizar en una situación determinada; dicha decisión se deja al arbitrio del fabricante del equipo WiMAX y del operador de red. Lo mismo sucede con las políticas para asignar el tiempo de canal ascendente a los nodos, en este caso WiMAX solo proporciona los mecanismos para implementar una política que podría asignar diferentes periodos de tiempo de acceso al canal a las distintas estaciones de abonado.
+>El estándar WiMAX no impone un conjunto concreto de parámetros de la capa física que haya que utilizar en una situación determinada; dicha decisión se deja al fabricante del equipo WiMAX y del operador de red. Lo mismo sucede con las políticas para asignar el tiempo de canal ascendente a los nodos, en este caso WiMAX solo proporciona los mecanismos para implementar una política que podría asignar diferentes periodos de tiempo de acceso al canal a las distintas estaciones de abonado.
 
 El formato de la trama para las redes WiMAX es el que se muestra en la imagen, el único campo sobre el que hablaremos es del campo identificador de conexión. En WiMAX las direcciones MAC de los dispositivos se puede considerar más apropiadamente como un identificador del equipo, ya que la comunicación entre equipos terminales termina por ser asignada a un identificador de conexión.
 
@@ -184,9 +167,7 @@ La radio celular es una técnica que fue desarrollada con el fin de incrementar 
 ![[patrones-celulas.png]]
 
 En la actualidad se utiliza el patrón hexagonal, ya que este permite que cada celda esté a la misma distancia de la estación base, tal y como se muestra en la imagen. Esto garantiza si un usuario se traslada nunca se quede sin conexión.
-
 Cada celda en un sistema celular posee un transceptor base. La potencia de transmisión se controla cuidadosamente para permitir la comunicación dentro de la celda utilizando una frecuencia dada, a la vez que se limita la potencia en esa frecuencia que escapa de los límites de la celda, alcanzando así las adyacentes.
-
 El objetivo principal es lograr usar la misma frecuencia en otras celdas cercanas, permitiendo de esta forma que la misma frecuencia pueda ser empleada en varias conversaciones simultáneamente. La cuestión esencial es determinar cuántas celdas debe haber entre dos celdas que utilizan la misma frecuencia para que estas dos no interfieran entre sí, tal y como se aprecia en la imagen.
 
 ![[patron-reutilizacion.png]]
@@ -196,5 +177,4 @@ Cabe aclarar que lo mostrado en la imagen es solo uno de los varios patrones que
 ## Bluetooth
 
 El estándar IEEE 802.15 define un tipo de red inalámbrica de corto alcance, que opera a una baja potencia y a un bajo coste. Al contrario de las redes definidas por la IEEE 802.11 que poseen un punto de acceso, mayor potencia y una mayor velocidad, tecnologías como Bluetooth no requieren de ningún tipo de infraestructura para operar y posee un alcance más reducido, por esta razón suele referirse a este tipo de redes como redes inalámbricas de área personal (WPAN).
-
 Estas redes operan en la banda de radio sin licencia de 2,4 GHz en forma TDM, con particiones de tiempo de 625 microsegundos. Durante cada partición de tiempo, un emisor transmite en uno de 79 canales, cambiando el canal de una partición a otra de forma pseudoaleatoria. Este tipo de saltos de canal, que es una técnica conocida con el nombre de ***espectro disperso por salto de frecuencia (FHSS)***. Este tipo de redes son por definición redes ad hoc que puede organizarse en una *piconet* de hasta ocho dispositivos, donde se designa a uno de los dispositivos como maestro, este nodo maestro es el que designa el tiempo de transmisión para cada nodo. Los nodos restantes solo podrán transmitir si tienen permiso del nodo maestro, además solo se podrá enviar datos al nodo maestro.
