--- a/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/4. Capa Fisica.md
@@ -1,4 +1,4 @@
-El éxito en la transmisión de datos depende fundamentalmente de dos factores fundamentales: la calidad de la señal que se transmite y las características del medio de transmisión. Toda comunicación entre dos nodos se realiza a través de un medio de transmisión, los cuales pueden clasificarse como medios guiados y medios no guiados. En los medios guiados, las ondas se transmiten confinándolas a lo largo de un camino físico. Por el contrario, los medios no guiados, también denominados inalámbricos, proporcionan un medio para transmitir las ondas electromagnéticas sin confinarlas, como por ejemplo en la propagación a través del aire, el mar o el vacío.
+El éxito en la transmisión de datos depende fundamentalmente de dos factores fundamentales la calidad de la señal que se transmite y las características del medio de transmisión. Toda comunicación entre dos nodos se realiza a través de un medio de transmisión, los cuales pueden clasificarse como medios guiados y medios no guiados. En los medios guiados, las ondas se transmiten confinándolas a lo largo de un camino físico. Por el contrario, los medios no guiados, también denominados inalámbricos, proporcionan un medio para transmitir las ondas electromagnéticas sin confinarlas, como por ejemplo en la propagación a través del aire, el mar o el vacío.
 
 >[!note] Limitaciones en la Comunicación de Señales Electromagnéticas
 >Tanto los datos analógicos como los digitales se pueden transmitir usando señales analógicas o digitales. Es más, esto es ampliable al procesamiento intermedio que se haga entre la fuente y el destino, pudiendo ser igualmente analógico o digital.
@@ -48,7 +48,7 @@ Existe una relación entre la velocidad de transmisión, el ruido y la tasa de e
 $$SNR_{dB} = 10 \times log_{10} \ \frac{S}{R}$$
 
 Donde $S$ es la potencia de la señal y $R$ es la potencia del ruido. Esta expresión muestra, en decibelios, cuánto excede la señal al nivel de ruido. Una SNR alta significará una señal de alta calidad y, por tanto, la necesidad de un número reducido de repetidores.
-La relación señal-ruido es importante en la transmisión de datos digitales, porque nos permite determinar la máxima velocidad de transmisión que se puede conseguir. Una conclusión de Shannon es que la capacidad máxima del canal, en bits por segundo, verifica la siguiente ecuación:
+La relación señal-ruido es importante en la transmisión de datos digitales, porque nos permite determinar la máxima velocidad de transmisión que se puede conseguir. Una conclusión que obtuvo Shannon es que la capacidad máxima del canal, en bits por segundo, verifica la siguiente ecuación:
 
 $$C = B \times log_{2} \ (1 + SNR)$$
 
@@ -72,7 +72,7 @@ No obstante la industria de las telecomunicaciones ha optado por la transmisión
 4. **Seguridad y privacidad**: Las técnicas de cifrado son más fáciles de aplicar a datos digitales.
 5. **Integración**: La transmisión digital permite procesar de manera uniforme señales de voz, vídeo y datos, facilitando la integración y economías de escala.
 
-### Dificultades en la Transmisión
+### Dificultades en la Transmisión de Datos
 
 En cualquier sistema de comunicaciones se debe aceptar que la señal que se recibe diferirá de la señal transmitida debido a varias adversidades y dificultades sufridas en la transmisión. Las dificultades más significativas son:
 
@@ -82,7 +82,7 @@ En cualquier sistema de comunicaciones se debe aceptar que la señal que se reci
 
 #### Atenuación de la Señal
 
-En cualquier medio de transmisión, la energía de la señal disminuye a medida que aumenta la distancia. En medios guiados, esta reducción de energía suele ser exponencial y se expresa como un valor constante en decibelios por unidad de longitud. En medios no guiados, la atenuación depende de la distancia y es influenciada por las condiciones atmosféricas. Se pueden considerar tres aspectos importantes sobre la atenuación:
+En cualquier medio de transmisión, la energía de la señal disminuye a medida que aumenta la distancia. En medios guiados, esta reducción de energía suele ser exponencial y se expresa como un valor constante en decibelios por unidad de longitud. Para los medios no guiados, la atenuación depende de la distancia y es influenciada por las condiciones atmosféricas. Se pueden considerar tres aspectos importantes sobre la atenuación:
 
 1. La señal recibida debe tener suficiente energía para que la circuitería electrónica en el receptor pueda detectar la señal adecuadamente. 
 2. Para que una señal pueda ser recibida sin error, la señal debe conservar un nivel suficientemente mayor que el ruido. 
@@ -93,7 +93,7 @@ La distorsión de atenuación es una variación en la reducción de la energía 
 
 #### Distorsión de Retardo
 
-La distorsión de retardo ocurre cuando la velocidad de propagación de una señal en un medio guiado varía según la frecuencia. Esto provoca que las diferentes frecuencias de la señal lleguen al receptor en distintos momentos, causando desplazamientos de fase y distorsionando la señal. Este fenómeno es especialmente problemático en la transmisión de datos digitales, ya que puede provocar interferencia entre símbolos y limitar la velocidad máxima de transmisión. Este efecto puede ser compensado empleado distintas técnicas de ecualización.
+La distorsión de retardo ocurre cuando la velocidad de propagación de una señal en un medio guiado varía según la frecuencia. Esto provoca que las diferentes frecuencias de la señal lleguen al receptor en distintos momentos, causando desplazamientos de fase distorsionando la señal. Este fenómeno es especialmente problemático en la transmisión de datos digitales, ya que puede provocar interferencia entre símbolos y limitar la velocidad máxima de transmisión. Este efecto puede ser compensado empleado distintas técnicas de ecualización.
 
 #### Ruido
 
